code chages vikas

--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <h1> This is new website </h1>
-<h2> cloning to anew branch </h2>
+<h2> cloning to a new branch and i am learning git </h2>
+<h3> its a new day </h3>
