--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1> This is new website </h1>
 <h2> cloning to a new branch and i am learning git , new lines added </h2>
-<h3> its a new day </h3>
+<h3> its a new day and happy to help </h3>
